--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts":{
+    "start": "nodemon app.js"
+},
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "dependencies":
+  {
     "body-parser": "^1.17.2",
     "connect-flash": "^0.1.1",
     "ejs": "^2.5.6",
@@ -19,6 +20,6 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
-    "request": "^2.81.0",
+    "request": "^2.81.0"
   }
 }
