--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "scripts":{
+  "scripts": {
     "start": "node app.js"
-},
+  },
   "author": "",
   "license": "ISC",
-  "dependencies":
-  {
+  "dependencies": {
     "body-parser": "^1.17.2",
     "connect-flash": "^0.1.1",
     "ejs": "^2.5.6",
